# gxr-envir

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml
gxr/: config.py  dotpath.py  typing.py
gxr/envir/: __init__.py  behavior.py  dynamics.py  game.py  model.py  plotting.py  simulation.py
gxr/envir/config/: __init__.py  _config.py  default.cfg
gxr/envir/functions/: __init__.py  abc.py  accumulation.py  agents.py  envir.py  state.py  utility.py
gxr/utils/: array.py  misc.py
notebooks/: 0-utility-functions.ipynb  1-ode-harvesting.ipynb  1-random-harvesting.ipynb  2-ode-harvesting.ipynb  _ode-example.ipynb  _utility-functions.ipynb  envir-simulations.ipynb  large-simulations.ipynb  ode-simulations.ipynb
scripts/: simulation.py
tests/: test_array_utils.py  test_utility.py
tests/functions/: conftest.py  test_accumulation.py  test_agents.py  test_envir.py  test_state.py
